k8-helm-manifest/templates/flask-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: flask-api-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flask-api-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
